--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Bat Songs.loader.js";
+      var loaderUrl = buildUrl + "/BatSongs2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Bat Songs.data",
-        frameworkUrl: buildUrl + "/Bat Songs.framework.js",
-        codeUrl: buildUrl + "/Bat Songs.wasm",
+        dataUrl: buildUrl + "/BatSongs2.data",
+        frameworkUrl: buildUrl + "/BatSongs2.framework.js",
+        codeUrl: buildUrl + "/BatSongs2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Dasha_Anikina",
         productName: "Bat Songs",
